data/derived/comb/progs/unify/prog4740.ml.out
Characters 61-62:
  wwhile(f, b)
         ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a * bool
